auth part 2 completed
